<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".add">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/text_view_id"
            style="@style/TextAppearance.AppCompat.Headline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="100dp"
            android:layout_marginTop="50dp"
            android:text="@string/add_medication" />


    </LinearLayout>

    <TextView
        android:id="@+id/text_view_id_name"
        style="@style/TextAppearance.AppCompat.Headline"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="50dp"
        android:layout_marginTop="150dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/form_name_of_med" />

    <EditText
        android:id="@+id/EditTextName"
        android:layout_height="wrap_content"
        android:hint="@string/form_name_of_med_input"
        android:inputType="textPersonName"
        android:layout_width="fill_parent"
        android:layout_gravity="center_vertical">

    </EditText>

    <ImageView
        android:id="@+id/back_button"
        android:layout_width="30dp"
        android:layout_height="40dp"
        android:layout_marginTop="45dp"
        android:layout_marginLeft="15dp"
        android:src="@drawable/iu"/>

    <com.google.android.material.progressindicator.ProgressIndicator
        android:id="@+id/progressLinearDeterminate"
        style="@style/Widget.MaterialComponents.ProgressIndicator.Linear.Determinate"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="100dp"
        android:progress="25" />

    <Button
        android:id="@+id/ButtonSendFeedback"
        android:layout_height="wrap_content"
        android:text="@string/form_name_of_med_submit"
        android:onClick="submitNameOfMed"
        android:layout_marginTop="500dp"
        android:layout_width="fill_parent">
    </Button>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:menu="@menu/bottom_navigation_menu"
        tools:layout_editor_absoluteX="-16dp"
        tools:layout_editor_absoluteY="676dp"
        app:labelVisibilityMode="labeled"
        android:layout_gravity="bottom"/>
</FrameLayout>