<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".add">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/text_view_id"
            style="@style/TextAppearance.AppCompat.Headline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="100dp"
            android:layout_marginTop="50dp"
            android:text="@string/add_medication" />




    </LinearLayout>

    <TextView
        android:id="@+id/text_view_id_name_question"
        style="@style/TextAppearance.AppCompat.Headline"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="50dp"
        android:layout_marginTop="150dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/form_schedule_of_med" />

    <TextView
        android:id="@+id/text_view_id_name"
        style="@style/TextAppearance.AppCompat.Headline"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="50dp"
        android:layout_marginTop="180dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/form_schedule_of_med" />

    <ImageView
        android:id="@+id/back_button"
        android:layout_width="30dp"
        android:layout_height="40dp"
        android:layout_marginTop="45dp"
        android:layout_marginLeft="15dp"
        android:src="@drawable/iu"/>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/button_timepicker"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="330dp"
        android:layout_marginLeft="100dp"
        android:text="No Alarm set"
        android:textSize="20sp" />
    <Button
        android:id="@+id/button_timepicker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="240dp"
        android:text="open time picker" />
    <Button
        android:id="@+id/button_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="110dp"
        android:layout_below="@id/button_timepicker"
        android:layout_centerHorizontal="true"

        android:layout_marginTop="280dp"
        android:text="cancel alarm" />

    <CheckBox
        android:id="@+id/checkBox2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="370dp"
        android:text="Every day" />
<!--    <TextView-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:id="@+id/tv_timer1"-->
<!--        android:textSize="32sp"-->
<!--        android:textStyle="bold"-->
<!--        android:gravity="center"-->
<!--        android:drawableTop="@drawable/ic_time"-->
<!--        android:layout_marginTop="250dp"-->
<!--        android:drawablePadding="16dp"-->
<!--        android:background="@android:drawable/editbox_background"/>-->





    <com.google.android.material.progressindicator.ProgressIndicator
        android:id="@+id/progressLinearDeterminate"
        style="@style/Widget.MaterialComponents.ProgressIndicator.Linear.Determinate"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="100dp"
        android:progress="90" />

    <Button
        android:onClick="ShowPopup"
        android:id="@+id/ButtonSendFeedback"
        android:layout_height="wrap_content"
        android:text="@string/form_schedule_of_med_submit"
        android:layout_marginTop="500dp"
        android:layout_width="fill_parent">
    </Button>



    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:menu="@menu/bottom_navigation_menu"
        app:labelVisibilityMode="labeled"
        tools:layout_editor_absoluteX="-16dp"
        tools:layout_editor_absoluteY="676dp"
        android:layout_gravity="bottom"/>

    <com.dpro.widgets.WeekdaysPicker
        android:id="@+id/weekdays"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="430dp"
        app:sunday_first_day="false"
        app:highlight_color="@color/blue"
        app:text_color="@color/white"
        app:background_color="@color/white"/>

</FrameLayout>